# MSiM

./: CMakeLists.txt
include/: MSiM.h
include/elements/: Bot.h  Collision.h  CollisionAux.h  CollisionListener.h  Dee.h  Entity.h  Fee.h  World.h
include/elements/subelements/: Pos.h  Presets.h
src/: MSiM.cpp
src/elements/: Bot.cpp  Collision.cpp  CollisionAux.cpp  CollisionListener.cpp  Dee.cpp  Entity.cpp  Fee.cpp  World.cpp
src/elements/subelements/: Pos.cpp  Presets.cpp
storage/: Prueba.txt  Pruebas2.txt
testing/: main.cpp
